--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
     nginx:
-        image: nginx
+        image: nginx:latest
         container_name: nginx
         depends_on:
             - gustavodcdamas
