--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -46,4 +46,9 @@ http {
 
   open_file_cache off;
   charset UTF-8;
+
+  upstream gustavodcdamas {
+    server gustavodcdamas:8081;
+    server  localhost:8081;
+  }
 }
