--- a/public/gustavodcdamas/docker-compose.yml
+++ b/public/gustavodcdamas/docker-compose.yml
@@ -17,7 +17,10 @@ services:
       - wordpress:/var/www/html
       - ./src/tema:/var/www/html/wp-content/themes/meu-plugin
       - ./src/plugin:/var/www/html/wp-content/plugins/meu-plugin
-
+    networks:
+      - net_local
+      - geral
+      - back
   db:
     image: mysql:8.0
     restart: always
@@ -28,7 +31,10 @@ services:
       MYSQL_RANDOM_ROOT_PASSWORD: '1'
     volumes:
       - db:/var/lib/mysql 
-
+    networks:
+      - net_local
+      - geral
+      - back
   adminer:
     depends_on: 
       - db
@@ -36,7 +42,10 @@ services:
     restart: always
     ports: 
       - 8888:8080 
-    
+    networks:
+      - net_local
+      - geral
+      - back  
 networks:
   back:
   net_local:
