--- a/nginx/sites-available/gustavodcdamas.conf
+++ b/nginx/sites-available/gustavodcdamas.conf
@@ -4,7 +4,7 @@ server {
     server_name gustavodcdamas.com.br www.gustavodcdamas.com.br;
 
     location / {
-        proxy_pass http://gustavodcdamas; 
+        proxy_pass http://gustavodcdamas:8081; 
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
