--- a/nginx/sites-available/gustavodcdamas.conf
+++ b/nginx/sites-available/gustavodcdamas.conf
@@ -1,10 +1,11 @@
 server {
     listen 80;
+    listen 443;
 
     server_name gustavodcdamas.com.br www.gustavodcdamas.com.br;
 
     location / {
-        proxy_pass http://gustavodcdamas:8081; 
+        proxy_pass http://gustavodcdamas:80; 
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
