--- a/public/gustavodcdamas/docker-compose.yml
+++ b/public/gustavodcdamas/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   gustavodcdamas:
     container_name: gustavodcdamas
-    image: wordpress
+    image: wordpress:latest
     restart: always
     ports:
       - 8081:80
@@ -14,7 +14,7 @@ services:
       WORDPRESS_DB_PASSWORD: senhapadrao
       WORDPRESS_DB_NAME: wpdb
     volumes:
-      - wordpress:/var/www/html
+      - ./src/uploads:/var/www/html/wp-content/uploads
       - ./src/tema:/var/www/html/wp-content/themes/meu-plugin
       - ./src/plugin:/var/www/html/wp-content/plugins/meu-plugin
     networks:
@@ -22,7 +22,7 @@ services:
       - geral
       - back
   db:
-    image: mysql:8.0
+    image: mysql:latest
     restart: always
     environment:
       MYSQL_DATABASE: wpdb
