--- a/nginx/sites-available/n8n-vivian.conf
+++ b/nginx/sites-available/n8n-vivian.conf
@@ -4,9 +4,9 @@ server {
 
 	listen 443 ssl http2;
 	listen [::]:443 ssl http2;
-	ssl_certificate /etc/letsencrypt/live/horizon-dev.net/fullchain.pem; # managed by Certbot
-	ssl_certificate_key /etc/letsencrypt/live/horizon-dev.net/privkey.pem; # managed by Certbot
-	ssl_trusted_certificate /etc/letsencrypt/live/horizon-dev.net/chain.pem;
+	ssl_certificate /etc/letsencrypt/live/n8n-vivian/fullchain.pem; # managed by Certbot
+	ssl_certificate_key /etc/letsencrypt/live/n8n-vivian/privkey.pem; # managed by Certbot
+	ssl_trusted_certificate /etc/letsencrypt/live/n8n-vivian/chain.pem;
 
 	# Improve HTTPS performance with session resumption
 	ssl_session_cache shared:SSL:10m;
@@ -35,7 +35,7 @@ server {
 	# Add index.php to the list if you are using PHP
 	index index.html index.htm index.nginx-debian.html index.php;
 
-	server_name horizon-dev.net;
+	server_name n8n.vivian.com;
 
   # Increase client body size
   client_max_body_size 256M;
