--- a/nginx/sites-available/n8nvivian.conf
+++ b/nginx/sites-available/n8nvivian.conf
@@ -2,12 +2,6 @@ server {
 	listen 80;
 	listen [::]:80;
 
-	listen 443 ssl http2;
-	listen [::]:443 ssl http2;
-	ssl_certificate /etc/letsencrypt/live/n8n-vivian/fullchain.pem; # managed by Certbot
-	ssl_certificate_key /etc/letsencrypt/live/n8n-vivian/privkey.pem; # managed by Certbot
-	ssl_trusted_certificate /etc/letsencrypt/live/n8n-vivian/chain.pem;
-
 	# Improve HTTPS performance with session resumption
 	ssl_session_cache shared:SSL:10m;
 	ssl_session_timeout 5m;
@@ -35,7 +29,7 @@ server {
 	# Add index.php to the list if you are using PHP
 	index index.html index.htm index.nginx-debian.html index.php;
 
-	server_name n8n.vivian.com;
+	server_name n8n.vivianpereira.com;
 
   # Increase client body size
   client_max_body_size 256M;
