--- a/public/gustavodcdamas/docker-compose.yml
+++ b/public/gustavodcdamas/docker-compose.yml
@@ -50,6 +50,12 @@ services:
 
 networks:
   back:
+  networks:
+    net_local:
+        driver: bridge
+    geral:
+        external: true
+
 
 volumes:
   wordpress:
