--- a/public/n8n-vivian/.env
+++ b/public/n8n-vivian/.env
@@ -1,5 +1,5 @@
 # The top level domain to serve from
-DOMAIN_NAME=cuei.com.br
+DOMAIN_NAME=vivianpereira.com
 
 # The subdomain to serve from
 SUBDOMAIN=n8n
