--- a/public/cal/.env
+++ b/public/cal/.env
@@ -12,18 +12,18 @@ LICENSE=
 # BASE_URL=http://localhost:3000
 # NEXT_PUBLIC_APP_URL=http://localhost:3000
 
-NEXT_PUBLIC_WEBAPP_URL=http://localhost:3000
-NEXT_PUBLIC_API_V2_URL=http://localhost:5555/api/v2
+NEXT_PUBLIC_WEBAPP_URL=https://cal.cuei.com.br
+NEXT_PUBLIC_API_V2_URL=https://cal.cuei.com.br/api/v2
 
 # Configure NEXTAUTH_URL manually if needed, otherwise it will resolve to {NEXT_PUBLIC_WEBAPP_URL}/api/auth
 # NEXTAUTH_URL=http://localhost:3000/api/auth
 
 # It is highly recommended that the NEXTAUTH_SECRET must be overridden and very unique
 # Use `openssl rand -base64 32` to generate a key
-NEXTAUTH_SECRET=secret
+NEXTAUTH_SECRET=YPuGt7+Joyqv4Br5obY+KzmDHVKvs6V0vDC7Rx9UPc8=
 
 # Encryption key that will be used to encrypt CalDAV credentials, choose a random string, for example with `dd if=/dev/urandom bs=1K count=1 | md5sum`
-CALENDSO_ENCRYPTION_KEY=secret
+CALENDSO_ENCRYPTION_KEY=a7de9cff7ef451721d748ecc0c8a2f8d
 
 # Deprecation note: JWT_SECRET is no longer used
 # JWT_SECRET=secret
@@ -51,12 +51,12 @@ ZOOM_CLIENT_SECRET=
 
 # E-mail settings
 # Configures the global From: header whilst sending emails.
-EMAIL_FROM=notifications@example.com
+EMAIL_FROM=contato@cuei.com.br
 
 # Configure SMTP settings (@see https://nodemailer.com/smtp/).
-EMAIL_SERVER_HOST=smtp.example.com
-EMAIL_SERVER_PORT=587
-EMAIL_SERVER_USER=email_user
-EMAIL_SERVER_PASSWORD=email_password
+EMAIL_SERVER_HOST=smtp.hostinger.com
+EMAIL_SERVER_PORT=465
+EMAIL_SERVER_USER=contatao@cuei.com.br
+EMAIL_SERVER_PASSWORD=Mesa12Chuveiro67!
 
 NODE_ENV=production
