--- a/public/cal/.env
+++ b/public/cal/.env
@@ -36,7 +36,7 @@ DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DATABASE_HOST}
 # Needed to run migrations while using a connection pooler like PgBouncer
 # Use the same one as DATABASE_URL if you're not using a connection pooler
 DATABASE_DIRECT_URL=${DATABASE_URL}
-GOOGLE_API_CREDENTIALS={}
+GOOGLE_API_CREDENTIALS=AIzaSyA2iy0a7G8SKvHKAYYD71B13KbmPl8rAFk
 
 # Set this to '1' if you don't want Cal to collect anonymous usage
 CALCOM_TELEMETRY_DISABLED=
