--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,25 +17,33 @@ http {
   types_hash_max_size 2048;
   client_max_body_size 20M;
   
- 
+  # Limitar a taxa de requisições para proteger contra DDoS
+  limit_req_zone $binary_remote_addr zone=one:10m rate=1r/s;
+
+  # Cache estático
+  proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=my_cache:10m max_size=1g inactive=60m use_temp_path=off;
+
+  # Compressão gzip
   gzip on;
   gzip_disable "msie6";
+  gzip_vary on;
+  gzip_proxied any;
+  gzip_comp_level 6;
+  gzip_buffers 16 8k;
+  gzip_http_version 1.1;
+  gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
   log_format main '$remote_addr - $remote_user [$time_local] "$request" ' 
-            '$status $body_bytes_sent "$http_referer" '
-            '"$http_user_agent" "$http_x_forwarded_for"';
+    '$status $body_bytes_sent "$http_referer" '
+    '"$http_user_agent" "$http_x_forwarded_for"'
+  ;
 
-  access_log /var/log/nginx/access.log main;  # Localização do arquivo de log de acesso
-  error_log /var/log/nginx/error.log;  # Localização do arquivo de log de erros
+  access_log /var/log/nginx/nginx_access.log main;  # Localização do arquivo de log de acesso
+  error_log /var/log/nginx/nginx_error.log;  # Localização do arquivo de log de erros
 
-  add_header X-Frame-Options SAMEORIGIN;
-  add_header X-Content-Type-Options nosniff;
-  add_header X-XSS-Protection "1; mode=block";
-  
   ssl_protocols TLSv1.2 TLSv1.3;
-  ssl_prefer_server_ciphers off;
+  ssl_prefer_server_ciphers on;
   ssl_ciphers 'ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384';
-  
   
   include /etc/nginx/conf.d/*.conf;
   include /etc/nginx/sites-available/*.conf;
@@ -44,4 +52,11 @@ http {
 
   open_file_cache off;
   charset UTF-8;
+
+  # Configuração de headers de segurança
+  add_header X-Frame-Options DENY;
+  add_header X-Content-Type-Options nosniff;
+  add_header X-XSS-Protection "1; mode=block";
+  add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+
 }
