--- a/public/drive/docker-compose.yml
+++ b/public/drive/docker-compose.yml
@@ -1,36 +1,130 @@
-version: "3.7"
+version: '3.2'
+
+
+
 services:
 
-  nextcloud-aio:
-    image: nextcloud/all-in-one:latest
-    init: true
-    restart: unless-stopped
-    container_name: drive 
+  drive-db:
+
+    image: postgres
+
+    restart: always
+
+    container_name: drive-db
+
     volumes:
-      - nextcloud_aio_mastercontainer:/mnt/docker-aio-config   
-      - /var/run/docker.sock:/var/run/docker.sock:ro 
-    ports:
-      - "8090:8080"
-      - "8443:8443" 
+
+      - db:/var/lib/postgresql/data
+
+    environment:
+
+      - POSTGRES_DB=nextcloud
+
+      - POSTGRES_USER=agencia
+
+      - POSTGRES_PASSWORD=Mesa12Chuveiro67!
+
     networks:
+
       - net_swarm
+
       - net_geral
-    environment: 
-      - APACHE_PORT=11000  # change this port number if 11000 is already in use on your host system.  
-      - APACHE_IP_BINDING=0.0.0.0 
-      
-volumes: 
-  nextcloud_aio_mastercontainer:
-    name: nextcloud_aio_mastercontainer  
+
+
+
+  drive:
+
+    image: nextcloud
+
+    restart: always
+
+    ports:
+
+      - 8081:80
+
+    container_name: drive
+
+    volumes:
+
+      - nextcloud:/var/www/html
+      - /var/reverse-proxy/nginx/letsencrypt/live/drive.cuei.com.br:/etc/ssl/nextcloud
+
+    environment:
+
+      - PHP_MEMORY_LIMIT=1024M
+
+      - PHP_UPLOAD_LIMIT=8192M
+
+      - POSTGRES_PASSWORD=Mesa12Chuveiro67!
+
+      - POSTGRES_DB=nextcloud
+
+      - POSTGRES_USER=agencia
+
+      - POSTGRES_HOST=drive-db
+
+      - NEXTCLOUD_ADMIN_USER=gustavodcdamas@gmail.com
+
+      - NEXTCLOUD_ADMIN_PASSWORD=Mesa12Chuveiro67!
+
+      - NEXTCLOUD_TRUSTED_DOMAINS=drive.cuei.com.br www.drive.cuei.com.br 185.194.217.192
+
+    depends_on:
+
+      - drive-db
+
+    networks:
+
+      - net_swarm
+
+      - net_geral
+
+  
+
+  cron:
+
+    image: nextcloud
+
+    restart: always
+
+    volumes:
+
+      - nextcloud:/var/www/html
+
+    entrypoint: /cron.sh
+
+    depends_on:
+
+      - drive-db
+
+
+
+volumes:
+
+  nextcloud:
+
+  db:
+
 
 
 networks:
+
   net_swarm:
+
     name: net_swarm
+
     external: true
+
     attachable: true
+
   net_geral:
+
     name: net_geral
+
     driver: bridge
+
     external: true
+
     attachable: true
+
+
